Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-30697

Memory leak detected when mariadb-binlog is used with option flashback

Details

    Description

      When mariadb-binlog is used with flasback option without server running, we can detect memory leak.

      $ ./client/mysqlbinlog mysql-test/var/tmp/mysqlbinlog_row_flashback_3.sql  --flashback
       
      /*!50530 SET @@SESSION.PSEUDO_SLAVE_MODE=1*/;
      /*!40019 SET @@session.max_delayed_threads=0*/;
      /*!50003 SET @OLD_COMPLETION_TYPE=@@COMPLETION_TYPE,COMPLETION_TYPE=0*/;
      DELIMITER /*!*/;
      ERROR: File is not a binary log file.
      Warning: 8216 bytes lost at 0x5604067a20a0, allocated by T@0 at mysys/array.c:73, client/mysqlbinlog.cc:3589, addr2line: DWARF error: section .debug_info is larger than its filesize! (0x93ef57 vs 0x530ea0)
      ??:0, ??:0
      Warning: 16408 bytes lost at 0x56040679e000, allocated by T@0 at mysys/array.c:73, client/mysqlbinlog.cc:3587, addr2line: DWARF error: section .debug_info is larger than its filesize! (0x93ef57 vs 0x530ea0)
      ??:0, ??:0
      Memory lost: 24624 bytes in 2 chunks
      

      This bug is not catched by Coverity scan.

      Attachments

        Issue Links

          Activity

            Transition Time In Source Status Execution Times
            Anel Husakovic made transition -
            Open In Progress
            6d 4h 12m 1
            Anel Husakovic made transition -
            In Progress In Review
            12s 1
            Anel Husakovic made transition -
            In Review Closed
            8d 22h 3m 1

            People

              TheLinuxJedi Andrew Hutchings (Inactive)
              anel Anel Husakovic
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.