MDEV-30697: Memory leak detected when mariadb-binlog is used with option flashback